# chronos-v2

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 4c00ceecaafa_initial_schema.py  5e5f224c385c_add_ai_provider_and_model_tables.py  ebc277a2a950_add_multimodal_columns_to_incident_.py
backend/skills/k8s-pod-crash/: SKILL.md
backend/skills/mysql-slow-query/: SKILL.md
backend/skills/redis-memory-analysis/: SKILL.md
backend/src/chronos/: main.py
backend/src/chronos/agent/: graph.py  runtime.py  state.py
backend/src/chronos/agent/nodes/: ask_human.py  classify.py  decide_mode.py  enrich.py  execute.py  finalize.py  ingest.py  observe.py  plan.py  replan.py  retrieve.py  summarize.py  verify.py
backend/src/chronos/agent/skills/: loader.py
backend/src/chronos/agent/tools/: bash.py  (+2 more)
backend/src/chronos/api/: deps.py
backend/src/chronos/core/: config.py  database.py  encryption.py  logging.py  redis.py  security.py
backend/src/chronos/models/: __init__.py  ai_provider.py  base.py  execution.py  incident.py  runbook.py  topology.py  user.py
backend/src/chronos/schemas/: ai_provider.py  chat.py  file_upload.py  incident.py  runbook.py  topology.py  user.py  webhook.py
backend/src/chronos/services/: ai_provider_service.py  chat_service.py  completions_service.py  execution_service.py  file_service.py  incident_service.py  llm_service.py  webhook_service.py
(+405 files in other folders)
